# ArchECM

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  README.md
include/: ArithmeticLogicUnit.h  BigChars.h  MyBigChars.h  MyReadKey.h  MySimpleComputer.h  MyTerm.h  TermDesign.h
src/: MainActivity.cpp  MyBigChars.cpp  MyReadKey.cpp  MySimpleComputer.cpp  MyTerm.cpp  SimpleComputerHandler.cpp  SimpleComputerMemory.cpp  TermRegime.cpp  TermSaveNRestore.cpp  bigCharInit.cpp  main.cpp
src/ALU/: ALUEncDecCommands.cpp  ALUMemoryHandler.cpp  ALURegNAccumHandler.cpp  ArithmeticLogicUnit.cpp  ControlUnit.cpp  TranslateCode.cpp
src/ALU/Commands/: ALUArithmetic.cpp  ALUControlTransfer.cpp  ALUIO.cpp  ALULoadNStore.cpp  ALUMovEax.cpp
src/BigCharSouce/: BigCharInit.cpp  BigChars.cpp  MyBigChars.cpp  bigCharInit.cpp
src/Encode/: LetterEncode.cpp  TranslateASM.cpp  TranslateBAS.cpp
src/Encode/BASCommands/: ENDCommand.cpp  GOTOCommand.cpp  IFCommand.cpp  INPUTCommand.cpp  LETCommand.cpp  OUTPUTCommand.cpp
src/Encode/BasicHandler/: CompareGOTO.cpp  FormQueue.cpp  GetPriority.cpp  JuxtaposeCode.cpp  LetterAddress.cpp  LetterEncode.cpp  ParseLET.cpp  StringRefactor.cpp  TransformToASMExpression.cpp
src/GUI/: GUIAccumulator.cpp  GUIAccumulatorNOperation.cpp  GUIAll.cpp  GUIBigChar.cpp  GUIFlags.cpp  GUIFlagsNInstruction.cpp  GUIFrames.cpp  GUIFramesNNames.cpp  GUIInstruction.cpp  GUIMemory.cpp  GUINames.cpp  GUIOperation.cpp  MainActivity.cpp
src/SignalSource/: Signals.cpp
src/SimpleComputerSource/: MySimpleComputer.cpp  SimpleComputerHandler.cpp  SimpleComputerMemory.cpp
src/TermSource/: MyReadKey.cpp  MyTerm.cpp  TermColors.cpp  TermDesign.cpp  TermEcho.cpp  TermRegime.cpp  TermSaveNRestore.cpp  TermScreenSize.cpp
